--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -14,7 +14,7 @@
             color: #D3D3D3;
         }
         .navbar {
-            background-color: #1a1a1a;
+            background-color: #4B4B4B;
             overflow: hidden;
         }
         .navbar a {
@@ -50,17 +50,10 @@
             border-bottom: 1px solid #666;
             padding-bottom: 2px;
         }
-        p, ul {
+        p {
             font-size: 16px;
             line-height: 1.6;
             color: #D3D3D3;
-        }
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-        li {
-            padding: 5px 0;
         }
     </style>
 </head>
@@ -78,51 +71,28 @@
         <h1>Security Clearance Rank List</h1>
 
         <h2>Clearance Level 6 (C6 - Censored and Unknown)</h2>
-        <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information at this level is strictly compartmentalized to protect the most sensitive and classified data. </p>
-        <p><strong>Access:</strong> Highly confidential projects and sensitive operations.</p>
-        <p><strong>Roles:</strong> ARI's top echelon, including the Director and trusted advisors.</p>
-        <p><strong>Responsibilities:</strong> Overseeing the institute's most critical and sensitive operations.</p>
+        <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information at this level is strictly compartmentalized to protect the most sensitive and classified data. Access to this level includes highly confidential projects and sensitive operations, ensuring that only the most trusted and senior officials are involved in the decision-making process.</p>
 
         <h2>Clearance Level 5 (C5 - Executive Council)</h2>
-        <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives. They play a crucial role in strategic planning and resource allocation.</p>
-        <p><strong>Access:</strong> Comprehensive operational data, high-level policy documents, inter-departmental coordination.</p>
-        <p><strong>Roles:</strong> Senior executives and head strategists.</p>
-        <p><strong>Responsibilities:</strong> Formulating and implementing high-impact projects and policies.</p>
+        <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives. This level involves strategic planning and resource allocation for significant projects. Individuals with C5 clearance play a crucial role in formulating and implementing high-impact policies and maintaining inter-departmental coordination.</p>
 
         <h2>Clearance Level 4 (C4 - Division Heads)</h2>
-        <p><strong>Description:</strong> Division Heads control departmental information, vital research data, and containment protocols. They ensure effective research and containment strategies within their departments.</p>
-        <p><strong>Access:</strong> Department-specific data, sensitive project information, advanced containment protocols.</p>
-        <p><strong>Roles:</strong> Heads of research, containment, and operational divisions.</p>
-        <p><strong>Responsibilities:</strong> Managing departmental operations and personnel.</p>
+        <p><strong>Description:</strong> Division Heads control departmental information, vital research data, and containment protocols. They are responsible for ensuring effective research and containment strategies within their departments. Access includes department-specific data and sensitive project information, allowing them to manage their teams and operations efficiently.</p>
 
         <h2>Clearance Level 3 (C3 - Lead Researchers and Containment Specialists)</h2>
-        <p><strong>Description:</strong> Assigned to lead researchers, containment specialists, and agents. This level involves access to detailed operational information and sensitive data necessary for their specialized roles.</p>
-        <p><strong>Access:</strong> Detailed research data, containment plans, and operational protocols.</p>
-        <p><strong>Roles:</strong> Senior researchers, lead containment specialists, and field agents.</p>
-        <p><strong>Responsibilities:</strong> Conducting research, developing and implementing containment strategies, and handling field operations.</p>
+        <p><strong>Description:</strong> Assigned to lead researchers, containment specialists, and agents. This clearance level grants access to detailed operational information and sensitive data necessary for specialized roles. Individuals with C3 clearance conduct research, develop and implement containment strategies, and handle field operations, ensuring the safety and success of ARI’s missions.</p>
 
         <h2>Clearance Level 2 (C2 - Support Personnel)</h2>
-        <p><strong>Description:</strong> Assigned to support staff including administration, analysts, security, and tech support. Access is restricted to information necessary for their tasks.</p>
-        <p><strong>Access:</strong> Operational support data, administrative records, general security information.</p>
-        <p><strong>Roles:</strong> Administrative staff, data analysts, security personnel, and technical support.</p>
-        <p><strong>Responsibilities:</strong> Providing essential services to support ARI's operations.</p>
+        <p><strong>Description:</strong> Assigned to support staff including administration, analysts, security, and tech support. Access is restricted to the information necessary for their specific tasks. Support personnel provide essential services that facilitate the smooth operation of ARI, ensuring critical functions are maintained.</p>
 
         <h2>Clearance Level 1 (C1 - General Personnel)</h2>
-        <p><strong>Description:</strong> Covers general personnel with access to basic information required for routine operations. These individuals do not handle sensitive data.</p>
-        <p><strong>Access:</strong> Basic operational information and non-sensitive data.</p>
-        <p><strong>Roles:</strong> Maintenance staff and general operational personnel.</p>
-        <p><strong>Responsibilities:</strong> Performing day-to-day tasks and support roles within ARI.</p>
+        <p><strong>Description:</strong> Covers general personnel with access to basic information required for routine operations. These individuals do not handle sensitive data but perform essential tasks that keep ARI operational. General personnel are involved in day-to-day activities, maintenance, and general support roles.</p>
 
         <h2>Clearance Level 0 (C0 - Non-essential Personnel)</h2>
-        <p><strong>Description:</strong> Limited access to critical information. Includes expendable personnel such as death row convicts, terminally ill individuals, and volunteers. This clearance level is regulated to minimize risks and ensure ethical standards are maintained, with protocols reviewed by an Ethical Review Board to safeguard the well-being and consent of these individuals.</p>
-        <p><strong>Access:</strong> Highly restricted, minimal critical information.</p>
-        <p><strong>Roles:</strong> Volunteers and non-critical support roles.</p>
-        <p><strong>Responsibilities:</strong> Engaging in specific tasks with minimal risk exposure, under strict ethical review.</p>
+        <p><strong>Description:</strong> Limited access to critical information. Includes expendable personnel such as death row convicts, terminally ill individuals, and volunteers. This clearance level is regulated to minimize risks and ensure ethical standards are maintained. Ethical protocols are reviewed by an Ethical Review Board to safeguard the well-being and consent of these individuals.</p>
 
         <h2>Personnel Advancement and Training</h2>
-        <p>Clearance levels can be adjusted based on performance, training, and qualifications. ARI provides a clear career progression path with regular reviews and targeted training to handle higher responsibilities.</p>
-        <p><strong>Advancement:</strong> Performance reviews, additional qualifications, and demonstrated competencies can lead to clearance upgrades.</p>
-        <p><strong>Training:</strong> Comprehensive programs covering aberration research, containment protocols, emergency response, and ethical considerations.</p>
+        <p>Clearance levels can be adjusted based on performance, training, and qualifications. ARI provides a clear career progression path with regular reviews and targeted training to handle higher responsibilities. Personnel are encouraged to pursue additional qualifications and demonstrate competencies to achieve clearance upgrades, ensuring they are well-prepared for their roles.</p>
     </div>
 </body>
 </html>
