--- a/homepage.html
+++ b/homepage.html
@@ -82,9 +82,10 @@
         <a href="homepage.html">Home</a>
         <a href="ABRlist.html">Aberration Index</a>
         <a href="clearanceranklist.html">Clearance Rank List</a>
+		<a href="stafftitles.html">Staff Titles</a>
         <a href="about.html">About</a>
-        <a href="#research">Research</a>
-        <a href="#contact">Contact</a>
+        <a href="research.html">Research</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <div class="container">
