--- a/stafftitles.html
+++ b/stafftitles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aberration Document - Aberration Research Institute</title>
+    <title>Staff Titles - Aberration Research Institute</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -74,58 +74,36 @@
         <a href="research.html">Research</a>
         <a href="contact.html">Contact</a>
     </div>
-php
-Copy code
-<div class="container">
-    <h1>ABERRATION DOCUMENT: ABR-002</h1>
-    <p><strong>Aberration Designation:</strong> ABR-002</p>
-    <p><strong>Threat Level:</strong> Class IV: Critical</p>
-    <p><strong>Containment Level:</strong> Delta-2</p>
 
-    <h2>Description</h2>
-    <p>Detailed description</p>
+    <div class="container">
+        <h1>Staff Titles</h1>
 
-    <h2>Containment Protocols</h2>
-    <p>insert text here</p>
+        <h2>Site Staff</h2>
+        <h3>Containment Specialist</h3>
+        <p>Containment Specialists at ARI are critical for maintaining the integrity of our operations. Their primary responsibility is to secure, contain, and transport Aberrations from the field to ARI containment sites. These specialists are also tasked with designing, implementing, and maintaining containment protocols and units for all classified Aberrations within ARI facilities.</p>
 
-    <h2>Risk Assessment</h2>
-    <p>insert text here</p>
+        <h3>Researcher</h3>
+        <p>Researchers are the intellectual backbone of ARI, composed of elite scientists from a variety of disciplines, including but not limited to, xenobiology, theoretical physics, and anomalous materials science. Their mission is to decode the mysteries of Aberrations and develop strategies to mitigate their threats.</p>
 
-    <h2>Behavioral Analysis</h2>
-    <p>insert text here</p>
+        <h3>Security Officer</h3>
+        <p>Security Officers at ARI are highly trained professionals responsible for the physical and informational security of ARI sites. Recruited from military and law enforcement backgrounds, they are adept in combat and crisis management. These officers also ensure the integrity of sensitive information and are the first line of defense against internal and external threats.</p>
 
-    <h2>Appendices</h2>
-    <p>insert text here</p>
+        <h3>Tactical Response Officer</h3>
+        <p>Tactical Response Officers are elite combat units trained to handle high-risk situations involving dangerous Aberrations or hostile entities. They support Containment Specialists during the most perilous retrieval missions and defend ARI facilities against aggressive incursions.</p>
 
-    <h1>Staff Titles</h1>
-    <h2>Site Staff</h2>
-    <p><strong>Containment Specialist</strong><br>
-    Containment Specialists at ARI are critical for maintaining the integrity of our operations. Their primary responsibility is to secure, contain, and transport Aberrations from the field to ARI containment sites. These specialists are also tasked with designing, implementing, and maintaining containment protocols and units for all classified Aberrations within ARI facilities.</p>
+        <h2>Field Personnel</h2>
+        <h3>Field Agent</h3>
+        <p>Field Agents are the eyes and ears of ARI, operating undercover within local law enforcement, emergency services, and regulatory bodies to detect and report signs of anomalous activity. Once identified, they coordinate with containment teams to secure the Aberrations.</p>
 
-    <p><strong>Researcher</strong><br>
-    Researchers are the intellectual backbone of ARI, composed of elite scientists from a variety of disciplines, including but not limited to, xenobiology, theoretical physics, and anomalous materials science. Their mission is to decode the mysteries of Aberrations and develop strategies to mitigate their threats.</p>
+        <h3>Mobile Task Force Operative</h3>
+        <p>Mobile Task Force Operatives are specialized units drawn from ARI's best field personnel. These operatives are assembled to address specific threats, from scientific researchers handling peculiar anomalies to heavily armed units dealing with dangerous entities. Each task force is tailored to a particular type of Aberration or threat.</p>
 
-    <p><strong>Security Officer</strong><br>
-    Security Officers at ARI are highly trained professionals responsible for the physical and informational security of ARI sites. Recruited from military and law enforcement backgrounds, they are adept in combat and crisis management. These officers also ensure the integrity of sensitive information and are the first line of defense against internal and external threats.</p>
+        <h2>Administration</h2>
+        <h3>Site Director</h3>
+        <p>The Site Director is the highest-ranking official at ARI facilities, responsible for overseeing all operations, ensuring the safety of contained Aberrations, and managing all departmental directors. The Site Director reports directly to the Executive Council.</p>
 
-    <p><strong>Tactical Response Officer</strong><br>
-    Tactical Response Officers are elite combat units trained to handle high-risk situations involving dangerous Aberrations or hostile entities. They support Containment Specialists during the most perilous retrieval missions and defend ARI facilities against aggressive incursions.</p>
-
-    <h2>Field Personnel</h2>
-    <p><strong>Field Agent</strong><br>
-    Field Agents are the eyes and ears of ARI, operating undercover within local law enforcement, emergency services, and regulatory bodies to detect and report signs of anomalous activity. Once identified, they coordinate with containment teams to secure the Aberrations.</p>
-
-    <p><strong>Mobile Task Force Operative</strong><br>
-    Mobile Task Force Operatives are specialized units drawn from ARI's best field personnel. These operatives are assembled to address specific threats, from scientific researchers handling peculiar anomalies to heavily armed units dealing with dangerous entities. Each task force is tailored to a particular type of Aberration or threat.</p>
-
-    <h2>Administration</h2>
-    <p><strong>Site Director</strong><br>
-    The Site Director is the highest-ranking official at ARI facilities, responsible for overseeing all operations, ensuring the safety of contained Aberrations, and managing all departmental directors. The Site Director reports directly to the Executive Council.</p>
-
-    <p><strong>Executive Council Member</strong><br>
-    The Executive Council consists of the top echelon of ARI leadership. Council members have complete access to all information regarding Aberrations and oversee all ARI operations. Their identities are classified, and they operate under strict protocols to avoid direct contact with Aberrations.</p>
-
-    <h1>END OF DOCUMENT</h1>
-</div>
+        <h3>Executive Council Member</h3>
+        <p>The Executive Council consists of the top echelon of ARI leadership. Council members have complete access to all information regarding Aberrations and oversee all ARI operations. Their identities are classified, and they operate under strict protocols to avoid direct contact with Aberrations.</p>
+    </div>
 </body>
 </html>
