--- a/stafftitles.html
+++ b/stafftitles.html
@@ -50,6 +50,11 @@
             border-bottom: 1px solid #666;
             padding-bottom: 2px;
         }
+        h3 {
+            font-size: 16px;
+            color: #f2f2f2;
+            margin-top: 20px;
+        }
         p, ul {
             font-size: 16px;
             line-height: 1.6;
@@ -78,32 +83,95 @@
     <div class="container">
         <h1>Staff Titles</h1>
 
-        <h2>Site Staff</h2>
-        <h3>Containment Specialist</h3>
-        <p>Containment Specialists at ARI are critical for maintaining the integrity of our operations. Their primary responsibility is to secure, contain, and transport Aberrations from the field to ARI containment sites. These specialists are also tasked with designing, implementing, and maintaining containment protocols and units for all classified Aberrations within ARI facilities.</p>
+        <h2>Executive Council (Clearance Level 5)</h2>
+        <h3>Director of Operations</h3>
+        <p>Oversees all ARI operations and initiatives.</p>
 
-        <h3>Researcher</h3>
-        <p>Researchers are the intellectual backbone of ARI, composed of elite scientists from a variety of disciplines, including but not limited to, xenobiology, theoretical physics, and anomalous materials science. Their mission is to decode the mysteries of Aberrations and develop strategies to mitigate their threats.</p>
+        <h3>Chief Research Officer</h3>
+        <p>Heads all research departments and projects.</p>
+
+        <h3>Chief Containment Officer</h3>
+        <p>Manages containment strategies and protocols.</p>
+
+        <h3>Chief Security Officer</h3>
+        <p>Responsible for the security of ARI facilities and personnel.</p>
+
+        <h3>Chief Ethical Officer</h3>
+        <p>Ensures all operations adhere to ethical standards.</p>
+
+        <h2>Division Heads (Clearance Level 4)</h2>
+        <h3>Head of Research Division</h3>
+        <p>Manages research activities across various departments.</p>
+
+        <h3>Head of Containment Division</h3>
+        <p>Oversees containment teams and ensures protocols are followed.</p>
+
+        <h3>Head of Security Division</h3>
+        <p>Leads security operations and emergency response teams.</p>
+
+        <h3>Head of Administrative Services</h3>
+        <p>Manages administrative support functions.</p>
+
+        <h3>Head of Technological Development</h3>
+        <p>Directs the development of new technologies for research and containment.</p>
+
+        <h2>Lead Researchers and Containment Specialists (Clearance Level 3)</h2>
+        <h3>Lead Researcher</h3>
+        <p>Supervises research projects and teams.</p>
+
+        <h3>Senior Containment Specialist</h3>
+        <p>Oversees containment operations for high-risk aberrations.</p>
+
+        <h3>Field Agent Leader</h3>
+        <p>Leads field operations for the capture and study of aberrations.</p>
+
+        <h3>Senior Security Officer</h3>
+        <p>Manages security personnel and operations.</p>
+
+        <h3>Senior Analyst</h3>
+        <p>Analyzes data and provides insights for research and containment efforts.</p>
+
+        <h2>Support Personnel (Clearance Level 2)</h2>
+        <h3>Research Assistant</h3>
+        <p>Assists researchers in their studies and experiments.</p>
+
+        <h3>Containment Technician</h3>
+        <p>Supports containment specialists in maintaining containment protocols.</p>
 
         <h3>Security Officer</h3>
-        <p>Security Officers at ARI are highly trained professionals responsible for the physical and informational security of ARI sites. Recruited from military and law enforcement backgrounds, they are adept in combat and crisis management. These officers also ensure the integrity of sensitive information and are the first line of defense against internal and external threats.</p>
+        <p>Provides security and ensures the safety of ARI facilities and personnel.</p>
 
-        <h3>Tactical Response Officer</h3>
-        <p>Tactical Response Officers are elite combat units trained to handle high-risk situations involving dangerous Aberrations or hostile entities. They support Containment Specialists during the most perilous retrieval missions and defend ARI facilities against aggressive incursions.</p>
+        <h3>Administrative Assistant</h3>
+        <p>Offers administrative support to various departments.</p>
 
-        <h2>Field Personnel</h2>
-        <h3>Field Agent</h3>
-        <p>Field Agents are the eyes and ears of ARI, operating undercover within local law enforcement, emergency services, and regulatory bodies to detect and report signs of anomalous activity. Once identified, they coordinate with containment teams to secure the Aberrations.</p>
+        <h3>Technical Support Specialist</h3>
+        <p>Maintains and repairs technological equipment.</p>
 
-        <h3>Mobile Task Force Operative</h3>
-        <p>Mobile Task Force Operatives are specialized units drawn from ARI's best field personnel. These operatives are assembled to address specific threats, from scientific researchers handling peculiar anomalies to heavily armed units dealing with dangerous entities. Each task force is tailored to a particular type of Aberration or threat.</p>
+        <h2>General Personnel (Clearance Level 1)</h2>
+        <h3>Junior Researcher</h3>
+        <p>Conducts research under the supervision of lead researchers.</p>
 
-        <h2>Administration</h2>
-        <h3>Site Director</h3>
-        <p>The Site Director is the highest-ranking official at ARI facilities, responsible for overseeing all operations, ensuring the safety of contained Aberrations, and managing all departmental directors. The Site Director reports directly to the Executive Council.</p>
+        <h3>Containment Support Staff</h3>
+        <p>Assists in basic containment operations and procedures.</p>
 
-        <h3>Executive Council Member</h3>
-        <p>The Executive Council consists of the top echelon of ARI leadership. Council members have complete access to all information regarding Aberrations and oversee all ARI operations. Their identities are classified, and they operate under strict protocols to avoid direct contact with Aberrations.</p>
+        <h3>Security Guard</h3>
+        <p>Monitors and patrols ARI premises.</p>
+
+        <h3>Administrative Clerk</h3>
+        <p>Handles routine administrative tasks and documentation.</p>
+
+        <h3>Lab Technician</h3>
+        <p>Prepares and maintains laboratory equipment and supplies.</p>
+
+        <h2>Non-essential Personnel (Clearance Level 0)</h2>
+        <h3>Expendable Personnel</h3>
+        <p>Includes individuals with limited access, often used in high-risk situations.</p>
+
+        <h3>Volunteer Subject</h3>
+        <p>Participates in research studies under strict ethical guidelines.</p>
+
+        <h3>Intern</h3>
+        <p>Gains experience and assists with low-risk tasks and duties.</p>
     </div>
 </body>
 </html>
