--- a/ABRlist.html
+++ b/ABRlist.html
@@ -72,7 +72,7 @@
         <div class="aberrations-list">
             <h1>Aberration Index</h1>
             <ul>
-                <li><a href="ABR001.html">ABR-001 - Nephological Entity</a></li>
+                <li><a href="Aberrations/ABR001.html">ABR-001 - Nephological Entity</a></li>
                 <li><a href="ABR002.html">ABR-002 - Voidshadow</a></li>
                 <li><a href="ABR003.html">ABR-003 - The Unseen Stalker</a></li>
                 <li><a href="ABR004.html">ABR-004 - The Oracle Terminal</a></li>
