--- a/ABRlist.html
+++ b/ABRlist.html
@@ -73,25 +73,25 @@
             <h1>Aberration Index</h1>
             <ul>
                 <li><a href="Aberrations/ABR001.html">ABR-001 - Nephological Entity</a></li>
-                <li><a href="ABR002.html">ABR-002 - Voidshadow</a></li>
-                <li><a href="ABR003.html">ABR-003 - The Unseen Stalker</a></li>
-                <li><a href="ABR004.html">ABR-004 - The Oracle Terminal</a></li>
-                <li><a href="ABR005.html">ABR-005 - The Embrace of Eudaimonia</a></li>
-                <li><a href="ABR006.html">ABR-006 - The Nexus Construct</a></li>
-                <li><a href="ABR007.html">ABR-007 - Luminous Halo</a></li>
-                <li><a href="ABR008.html">ABR-008 - Bone Sculptor</a></li>
-                <li><a href="ABR009.html">ABR-009 - Bobble the Clown</a></li>
-                <li><a href="ABR010.html">ABR-010 - The Toothpick</a></li>
-                <li><a href="ABR011.html">ABR-011 - The Sentinel</a></li>
-                <li><a href="ABR012.html">ABR-012 - Guided Ignition Projectile</a></li>
-                <li><a href="ABR013.html">ABR-013 - Resonant Metronome</a></li>
-                <li><a href="ABR014.html">ABR-014 - Echoing Whisperer</a></li>
-                <li><a href="ABR015.html">ABR-015 - Reflective Abyss</a></li>
-                <li><a href="ABR016.html">ABR-016 - Parasitic Chamber</a></li>
-                <li><a href="ABR017.html">ABR-017 - </a></li>
-                <li><a href="ABR018.html">ABR-018 - </a></li>
-                <li><a href="ABR019.html">ABR-019 - </a></li>
-                <li><a href="ABR020.html">ABR-020 - </a></li>
+                <li><a href="Aberrations/ABR002.html">ABR-002 - Voidshadow</a></li>
+                <li><a href="Aberrations/ABR003.html">ABR-003 - The Unseen Stalker</a></li>
+                <li><a href="Aberrations/ABR004.html">ABR-004 - The Oracle Terminal</a></li>
+                <li><a href="Aberrations/ABR005.html">ABR-005 - The Embrace of Eudaimonia</a></li>
+                <li><a href="Aberrations/ABR006.html">ABR-006 - The Nexus Construct</a></li>
+                <li><a href="Aberrations/ABR007.html">ABR-007 - Luminous Halo</a></li>
+                <li><a href="Aberrations/ABR008.html">ABR-008 - Bone Sculptor</a></li>
+                <li><a href="Aberrations/ABR009.html">ABR-009 - Bobble the Clown</a></li>
+                <li><a href="Aberrations/ABR010.html">ABR-010 - The Toothpick</a></li>
+                <li><a href="Aberrations/ABR011.html">ABR-011 - The Sentinel</a></li>
+                <li><a href="Aberrations/ABR012.html">ABR-012 - Guided Ignition Projectile</a></li>
+                <li><a href="Aberrations/ABR013.html">ABR-013 - Resonant Metronome</a></li>
+                <li><a href="Aberrations/ABR014.html">ABR-014 - Echoing Whisperer</a></li>
+                <li><a href="Aberrations/ABR015.html">ABR-015 - Reflective Abyss</a></li>
+                <li><a href="Aberrations/ABR016.html">ABR-016 - Parasitic Chamber</a></li>
+                <li><a href="Aberrations/ABR017.html">ABR-017 - </a></li>
+                <li><a href="Aberrations/ABR018.html">ABR-018 - </a></li>
+                <li><a href="Aberrations/ABR019.html">ABR-019 - </a></li>
+                <li><a href="Aberrations/ABR020.html">ABR-020 - </a></li>
             </ul>
         </div>
         <!-- Optional: Add other content here -->
