--- a/about.html
+++ b/about.html
@@ -52,6 +52,10 @@
             border-bottom: 2px solid #666;
             padding-bottom: 10px;
         }
+        h3 {
+            font-size: 20px;
+            margin: 10px 0;
+        }
         p, ul {
             font-size: 18px;
             line-height: 1.8;
@@ -93,7 +97,9 @@
 <body>
     <div class="navbar">
         <a href="homepage.html">Home</a>
-        <a href="ABRlist.html">Aberrations Index</a>
+        <a href="ABRlist.html">Aberration Index</a>
+        <a href="clearanceranklist.html">Clearance Rank List</a>
+        <a href="stafftitles.html">Staff Titles</a>
         <a href="about.html">About</a>
         <a href="research.html">Research</a>
         <a href="contact.html">Contact</a>
