--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
         .navbar {
             background-color: #1a1a1a;
             overflow: hidden;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.4);
         }
         .navbar a {
             float: left;
@@ -31,7 +30,7 @@
             color: black;
         }
         .container {
-            padding: 40px;
+            padding: 20px;
             margin: 20px auto;
             max-width: 800px;
             background-color: #4B4B4B;
@@ -39,31 +38,26 @@
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
         h1 {
-            font-size: 32px;
-            border-bottom: 2px solid #666;
-            padding-bottom: 10px;
-            margin-bottom: 20px;
+            font-size: 22px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         h2 {
-            font-size: 24px;
+            font-size: 18px;
             color: #D3D3D3;
             margin-top: 40px;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #666;
-            padding-bottom: 10px;
-        }
-        h3 {
-            font-size: 20px;
-            margin: 10px 0;
+            margin-bottom: -10px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         p, ul {
-            font-size: 18px;
-            line-height: 1.8;
+            font-size: 16px;
+            line-height: 1.6;
             color: #D3D3D3;
         }
         ul {
-            list-style-type: disc;
-            padding-left: 20px;
+            list-style-type: none;
+            padding-left: 0;
         }
         li {
             padding: 5px 0;
@@ -89,7 +83,7 @@
             text-align: center;
             padding: 20px;
             background-color: #4B4B4B;
-            border-top: 2px solid #666;
+            border-top: 1px solid #666;
             margin-top: 40px;
         }
     </style>
