--- a/ABRlist.html
+++ b/ABRlist.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aberration Index - Aberration Research Institute</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -9,6 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: #3a3a3a;
+            color: #D3D3D3;
         }
         .navbar {
             background-color: #1a1a1a;
@@ -23,39 +26,36 @@
             text-decoration: none;
         }
         .navbar a:hover {
-            background-color: #464646; /* Light grey background on hover */
-            color: black; /* Text color changes to black on hover */
+            background-color: #464646;
+            color: black;
         }
         .container {
             padding: 20px;
-            color: white;
-            display: flex;
-            justify-content: center; /* Centers the container horizontally */
+            margin: 20px auto;
+            max-width: 800px;
+            background-color: #4B4B4B;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
-        .aberrations-list {
-            width: 500px; /* Increased width */
-            background-color: #2d2d2d;
-            padding: 10px;
-            border: 2px solid #1a1a1a;
+        h1 {
+            font-size: 22px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         ul {
             list-style-type: none;
-            padding: 0;
-            margin: 0;
+            padding-left: 0;
         }
         li {
             padding: 8px;
             margin: 5px 0;
         }
         a {
-            color: #9c9c9c; /* Medium grey text color for links */
+            color: #9c9c9c;
             text-decoration: none;
         }
         a:hover {
-            color: #ffffff; /* Text color changes to white on hover */
-        }
-        h1 {
-            color: #9c9c9c; /* Sets the H1 color to match the link color */
+            color: #ffffff;
         }
     </style>
 </head>
@@ -63,38 +63,37 @@
     <div class="navbar">
         <a href="homepage.html">Home</a>
         <a href="ABRlist.html">Aberration Index</a>
+        <a href="clearanceranklist.html">Clearance Rank List</a>
+        <a href="stafftitles.html">Staff Titles</a>
         <a href="about.html">About</a>
         <a href="research.html">Research</a>
         <a href="contact.html">Contact</a>
     </div>
 
     <div class="container">
-        <div class="aberrations-list">
-            <h1>Aberration Index</h1>
-            <ul>
-                <li><a href="Aberrations/ABR001.html">ABR-001 - Nephological Entity</a></li>
-                <li><a href="Aberrations/ABR002.html">ABR-002 - Voidshadow</a></li>
-                <li><a href="Aberrations/ABR003.html">ABR-003 - The Unseen Stalker</a></li>
-                <li><a href="Aberrations/ABR004.html">ABR-004 - The Oracle Terminal</a></li>
-                <li><a href="Aberrations/ABR005.html">ABR-005 - The Embrace of Eudaimonia</a></li>
-                <li><a href="Aberrations/ABR006.html">ABR-006 - The Nexus Construct</a></li>
-                <li><a href="Aberrations/ABR007.html">ABR-007 - Luminous Halo</a></li>
-                <li><a href="Aberrations/ABR008.html">ABR-008 - Bone Sculptor</a></li>
-                <li><a href="Aberrations/ABR009.html">ABR-009 - Bobble the Clown</a></li>
-                <li><a href="Aberrations/ABR010.html">ABR-010 - The Toothpick</a></li>
-                <li><a href="Aberrations/ABR011.html">ABR-011 - The Sentinel</a></li>
-                <li><a href="Aberrations/ABR012.html">ABR-012 - Guided Ignition Projectile</a></li>
-                <li><a href="Aberrations/ABR013.html">ABR-013 - Resonant Metronome</a></li>
-                <li><a href="Aberrations/ABR014.html">ABR-014 - Echoing Whisperer</a></li>
-                <li><a href="Aberrations/ABR015.html">ABR-015 - Reflective Abyss</a></li>
-                <li><a href="Aberrations/ABR016.html">ABR-016 - Parasitic Chamber</a></li>
-                <li><a href="Aberrations/ABR017.html">ABR-017 - </a></li>
-                <li><a href="Aberrations/ABR018.html">ABR-018 - </a></li>
-                <li><a href="Aberrations/ABR019.html">ABR-019 - </a></li>
-                <li><a href="Aberrations/ABR020.html">ABR-020 - </a></li>
-            </ul>
-        </div>
-        <!-- Optional: Add other content here -->
+        <h1>Aberration Index</h1>
+        <ul>
+            <li><a href="Aberrations/ABR001.html">ABR-001 - Nephological Entity</a></li>
+            <li><a href="Aberrations/ABR002.html">ABR-002 - Voidshadow</a></li>
+            <li><a href="Aberrations/ABR003.html">ABR-003 - The Unseen Stalker</a></li>
+            <li><a href="Aberrations/ABR004.html">ABR-004 - The Oracle Terminal</a></li>
+            <li><a href="Aberrations/ABR005.html">ABR-005 - The Embrace of Eudaimonia</a></li>
+            <li><a href="Aberrations/ABR006.html">ABR-006 - The Nexus Construct</a></li>
+            <li><a href="Aberrations/ABR007.html">ABR-007 - Luminous Halo</a></li>
+            <li><a href="Aberrations/ABR008.html">ABR-008 - Bone Sculptor</a></li>
+            <li><a href="Aberrations/ABR009.html">ABR-009 - Bobble the Clown</a></li>
+            <li><a href="Aberrations/ABR010.html">ABR-010 - The Toothpick</a></li>
+            <li><a href="Aberrations/ABR011.html">ABR-011 - The Sentinel</a></li>
+            <li><a href="Aberrations/ABR012.html">ABR-012 - Guided Ignition Projectile</a></li>
+            <li><a href="Aberrations/ABR013.html">ABR-013 - Resonant Metronome</a></li>
+            <li><a href="Aberrations/ABR014.html">ABR-014 - Echoing Whisperer</a></li>
+            <li><a href="Aberrations/ABR015.html">ABR-015 - Reflective Abyss</a></li>
+            <li><a href="Aberrations/ABR016.html">ABR-016 - Parasitic Chamber</a></li>
+            <li><a href="Aberrations/ABR017.html">ABR-017 - </a></li>
+            <li><a href="Aberrations/ABR018.html">ABR-018 - </a></li>
+            <li><a href="Aberrations/ABR019.html">ABR-019 - </a></li>
+            <li><a href="Aberrations/ABR020.html">ABR-020 - </a></li>
+        </ul>
     </div>
 </body>
 </html>
