--- a/Aberrations/ABR019.html
+++ b/Aberrations/ABR019.html
@@ -23,7 +23,7 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none;
+            text-decoration: none.
         }
         .navbar a:hover {
             background-color: #464646;
@@ -53,22 +53,22 @@
         p, ul {
             font-size: 16px;
             line-height: 1.6;
-            color: #D3D3D3;
+            color: #D3D3D3.
         }
         ul {
-            list-style-type: none;
-            padding-left: 0;
+            list-style-type: none.
+            padding-left: 0.
         }
         li {
-            padding: 8px;
-            margin: 5px 0;
+            padding: 8px.
+            margin: 5px 0.
         }
         a {
             color: #9c9c9c;
-            text-decoration: none;
+            text-decoration: none.
         }
         a:hover {
-            color: #ffffff;
+            color: #ffffff.
         }
     </style>
 </head>
@@ -86,11 +86,12 @@
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-019</h1>
         <p><strong>Aberration Designation:</strong> ABR-019</p>
+        <p><strong>Special Title:</strong> Deathly Snapshot</p>
         <p><strong>Threat Level:</strong> Class IV: Critical</p>
         <p><strong>Containment Level:</strong> Delta-3</p>
 
         <h2>Description</h2>
-        <p>ABR-019 is a vintage Polaroid camera of unknown make and model. The camera exhibits no external markings or serial numbers, and its internal mechanisms do not correspond to any known manufacturing techniques. Despite its antiquated appearance, ABR-019 functions normally and produces instant photographs.</p>
+        <p>ABR-019, known as Deathly Snapshot, is a vintage Polaroid camera of unknown make and model. The camera exhibits no external markings or serial numbers, and its internal mechanisms do not correspond to any known manufacturing techniques. Despite its antiquated appearance, ABR-019 functions normally and produces instant photographs.</p>
         <p>When a photograph is taken using ABR-019, the resulting Polaroid image will depict the scene as expected; however, any individuals present within the frame will appear to be deceased. The manner of death varies and can include violent injuries, natural causes, or unknown factors. The death depicted in the photograph is a predestined event that will occur to the subject at some point in the future.</p>
         <p>Extensive testing has confirmed that the deaths predicted by ABR-019 are unavoidable. Even attempts to protect or isolate subjects from perceived threats have failed, with deaths occurring due to unforeseen circumstances or anomalies.</p>
 
