--- a/ABRlist.html
+++ b/ABRlist.html
@@ -89,9 +89,9 @@
             <li><a href="Aberrations/ABR014.html">ABR-014 - Echoing Whisperer</a></li>
             <li><a href="Aberrations/ABR015.html">ABR-015 - Reflective Abyss</a></li>
             <li><a href="Aberrations/ABR016.html">ABR-016 - Parasitic Chamber</a></li>
-            <li><a href="Aberrations/ABR017.html">ABR-017 - </a></li>
-            <li><a href="Aberrations/ABR018.html">ABR-018 - </a></li>
-            <li><a href="Aberrations/ABR019.html">ABR-019 - </a></li>
+            <li><a href="Aberrations/ABR017.html">ABR-017 - Phantom Flu</a></li>
+            <li><a href="Aberrations/ABR018.html">ABR-018 - Reflective Aberration</a></li>
+            <li><a href="Aberrations/ABR019.html">ABR-019 - Deathly Snapshot</a></li>
             <li><a href="Aberrations/ABR020.html">ABR-020 - </a></li>
         </ul>
     </div>
